# ClashTerminalX

./: .gitignore  README-CN.md  README.md  clashtx.sh  pyproject.toml
scripts/: clashtx-shell.sh  fetch-geodata.sh  install.sh
src/clashtx/: __init__.py  cli.py  controller.py  subscription.py
src/clashtx/config/: __init__.py  models.py  store.py
src/clashtx/core/: __init__.py  geodata.py  manager.py
src/clashtx/mihomo/: __init__.py  api.py
src/clashtx/system/: __init__.py  capabilities.py  network.py  proxy.py  service.py  tun.py
src/clashtx/tui/: __init__.py  app.py  style.tcss
src/clashtx/web/: __init__.py  app.py
src/clashtx/web/static/: app.js  index.html  style.css
tests/: test_capabilities.py  test_cli.py  test_config_store.py  test_controller.py  test_geodata.py  test_mihomo_api.py  test_network.py  test_proxy.py  test_subscription.py  test_web.py
